# GAME-Zombobs-2.5d

./: .gitignore  Cargo.toml  GEMINI.md  README.md  bootstrap.js  index.html  kill_port.bat  launch.bat  next_steps.md  ui.css
DOCS/: ARCHITECTURE.md  CAMERA_3D_PLAN.md  CHANGELOG.md  My_Thoughts.md  ROADMAP.md  SBOM.md  SCRATCHPAD.md  STYLE_GUIDE.md  SUMMARY.md  TESTING.md  UI_IMPLEMENTATION_TODO.md  next_steps.md
DOCS/debugs/: DEBUG_inverted_normals.md  DEBUG_wgsl_interpolation.md
concept-art/: IMAGE_GENERATION_GUIDE.md
src/: game.rs  lib.rs
src/engine/: ENGINE.md  components.rs  ecs.rs  input.rs  mod.rs  renderer.rs  shader.wgsl  systems.rs
tests/: collision_tests.rs
